--- a/nnlab/play-books/Splunk_Install_Ubuntu.yaml
+++ b/nnlab/play-books/Splunk_Install_Ubuntu.yaml
@@ -36,6 +36,19 @@
         create_home: no
         shell: /bin/bash
 
+    - name: Set ownership of Splunk directory
+      file:
+        path: "{{ splunk_home }}"
+        owner: "{{ splunk_user }}"
+        group: "{{ splunk_user }}"
+        recurse: yes
+
+    - name: Set correct permissions for Splunk directory
+      file:
+        path: "{{ splunk_home }}"
+        mode: '0755'
+        recurse: yes
+
     - name: Start Splunk service
       command: "{{ splunk_home }}/bin/splunk start --accept-license --answer-yes --no-prompt --seed-passwd {{ splunk_password }}"
       args:
