--- a/nnlab/play-books/Splunk_Install_Ubuntu.yaml
+++ b/nnlab/play-books/Splunk_Install_Ubuntu.yaml
@@ -19,6 +19,7 @@
       loop:
         - wget
         - tar
+        - iptables-persistent
 
     - name: Download Splunk Enterprise
       get_url:
