--- a/nnlab/play-books/Splunk_Install_Ubuntu.yaml
+++ b/nnlab/play-books/Splunk_Install_Ubuntu.yaml
@@ -4,8 +4,8 @@
   become: yes
 
   vars:
-    splunk_version: "9.1.0"  # Replace with the latest version
-    splunk_package_url: "https://download.splunk.com/products/splunk/releases/9.3.0/linux/splunk-9.3.0-51ccf43db5bd-linux-2.6-amd64.deb"
+    splunk_version: "9.3.0"  # Replace with the latest version
+    splunk_package_url: "https://download.splunk.com/products/splunk/releases/9.3.0/linux/splunk-9.3.0-51ccf43db5bd.x86_64.rpm"
     splunk_home: "/opt/splunk"
     splunk_user: "splunk"
     splunk_password: "yourpassword"  # Replace with your desired password
