--- a/nnlab/play-books/Splunk_Install_Ubuntu.yaml
+++ b/nnlab/play-books/Splunk_Install_Ubuntu.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Install Splunk Enterprise on Ubuntu 22.04
+- name: Install Splunk Enterprise on CentOS 9
   hosts: all
   become: yes
 
@@ -19,16 +19,16 @@
       loop:
         - wget
         - tar
-        - iptables-persistent
+        - iptables-services
 
     - name: Download Splunk Enterprise
       get_url:
         url: "{{ splunk_package_url }}"
-        dest: "/tmp/splunk.deb"
+        dest: "/tmp/splunk.rpm"
 
     - name: Install Splunk Enterprise
       apt:
-        deb: "/tmp/splunk.deb"
+        deb: "/tmp/splunk.rpm"
         state: present
 
     - name: Create Splunk user
@@ -75,13 +75,12 @@
       command: iptables -P OUTPUT ACCEPT
 
     - name: Save iptables rules
-      command: netfilter-persistent save
+      command: service iptables save
 
-    - name: Restart netfilter-persistent service
+    - name: Restart iptables service
       service:
-        name: netfilter-persistent
+        name: iptables
         state: restarted
-
 
 
 
