--- a/nnlab/play-books/Splunk_Install_Centos_9.yaml
+++ b/nnlab/play-books/Splunk_Install_Centos_9.yaml
@@ -23,11 +23,13 @@
       get_url:
         url: "{{ splunk_package_url }}"
         dest: "/tmp/splunk.rpm"
+        
 
     - name: Install Splunk Enterprise
       yum:
         name: "/tmp/splunk.rpm"
         state: present
+        disable_gpg_check: yes
 
     - name: Create Splunk user
       user:
