--- a/nnlab/play-books/Splunk_Install_Centos_9.yaml
+++ b/nnlab/play-books/Splunk_Install_Centos_9.yaml
@@ -18,6 +18,7 @@
       loop:
         - wget
         - iptables-services
+        - initscripts
 
     - name: Download Splunk Enterprise
       get_url:
